# vplan

./: .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .toxrc  Changelog  DEVELOPER.md  NOTICE  PyPI.md  README.md  SECURITY.md  TODO.md  pyproject.toml  run
.github/workflows/: test-suite.yml  tox.yml
.run/tasks/: build.sh  release.sh  rmdb.sh  server.sh  vplan.sh
config/installed/systemd/user/: vplan.service  vplan.socket
config/installed/vplan/: README.md
config/installed/vplan/client/: README.md  application.yaml
config/installed/vplan/server/: application.yaml  logging.yaml
config/local/vplan/client/: application.yaml
config/local/vplan/server/: application.yaml  server.env
config/local/vplan/server/db/: README.md
config/server/local/: application.yaml  server.env
config/user/systemd/user/: vplan.service
config/user/vplan/cli/: README.md
config/user/vplan/db/: README.md
config/user/vplan/run/: README.md
config/user/vplan/server/: README.md  application.yaml  server.env
docs/: conf.py  index.rst  requirements.txt
src/vplan/: config.py  interface.py  model.py  util.py
src/vplan/client/: bootstrap.py  cli.py  client.py  config.py
src/vplan/client/commands/: account.py  plan.py
src/vplan/client/data/: credentials.yaml  plan.yaml  vplan_engine.service  vplan_engine.socket  vplan_manager.service
src/vplan/engine/: config.py  database.py  entity.py  exception.py  interface.py  manager.py  model.py  plan.py  scheduler.py  server.py  smartthings.py  util.py
src/vplan/engine/fastapi/: extensions.py
src/vplan/engine/routers/: account.py  plan.py
src/vplan/manager/: runtime.py
src/vplan/unixsocket/: README.md  __init__.py  adapters.py
tests/: test_config.py  test_interface.py  test_model.py  test_util.py
tests/client/: test_cli.py  test_client.py  test_config.py
tests/client/commands/: test_account.py  test_plan.py
tests/client/fixtures/config/port/.config/vplan/client/: application.yaml
tests/client/fixtures/config/socket/.config/vplan/client/: application.yaml
tests/client/fixtures/interface/: bad.yaml
tests/engine/: test_config.py  test_database.py  test_exception.py  test_interface.py  test_manager.py  test_scheduler.py  test_server.py  test_smartthings.py  test_util.py
tests/engine/fixtures/config/: application.yaml
tests/engine/fixtures/interface/: bad.yaml  plan.yaml
tests/engine/fixtures/smartthings/: devices.json  edge-devices.json  locations.json  rooms.json  rules.json  switch_off.json  switch_on.json
tests/engine/routers/: test_account.py  test_plan.py
tests/fixtures/config/: credentials.yaml  plan.yaml
tests/fixtures/interface/: plan-max-ver.yaml  plan-min-ver.yaml  plan-v1.1.0.yaml  plan.yaml
tests/fixtures/model/: versioned.json
tests/unixsocket/: README.md  __init__.py  test_requests_unixsocket.py  testutils.py
utils/: tools.ps1
