[tool.poetry]
name = "vplan"
version = "0.0.0" # published version is managed using Git tags (see below)
description = "Vacation plan manager service for SmartThings"
authors = ["Kenneth J. Pronovici <pronovic@ieee.org>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/pronovic/vplan"
repository = "https://github.com/pronovic/vplan"
include = [
   { path = 'Changelog', format = 'sdist' },
   { path = 'NOTICE', format = 'sdist' },
   { path = 'LICENSE', format = 'sdist' },
   { path = 'README.md', format = 'sdist' },
   { path = 'tests', format = 'sdist' },
]
packages = [ { include = "vplan", from = "src" } ]
classifiers=[
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: Apache Software License",
   "Operating System :: Unix",
   "Environment :: Console",
   "Environment :: No Input/Output (Daemon)",
   "Intended Audience :: Developers",
   "Natural Language :: English",
   "Topic :: Home Automation",
]

# Published version is managed using Git tags
# We get either the tag (like "0.24.1") or a snapshot-type version (like "0.24.1+3.e8319c4")
# If the plugin is not installed, then the version is always "0.0.0", taken from above
[tool.poetry-dynamic-versioning]
enable = true
pattern = '^[vV](?P<base>\d+\.\d+\.\d+)'  # this extracts the version from our vX.Y.Z tag format
format-jinja = "{% if distance == 0 and not dirty %}{{ base }}{% else %}{{ base }}+{{ distance }}.{{ commit }}{% endif %}"

[tool.poetry.scripts]
vplan = "vplan.client.cli:vplan"

[tool.poetry.dependencies]
python = ">=3.9,<4"
fastapi = "~0, >=0.96.0"
uvicorn = "~0, >=0.20.0"
pydantic-yaml = "~0, >=0.10.0"
click = "^8.1.3"
requests = "^2.31.0"
requests-unixsocket = "~0, >=0.3.0"
SQLAlchemy = "^1.4.46"
APScheduler = "^3.10.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-testdox = "^3.0.1"
pytest-asyncio = "~0, >=0.20.3"
coverage = "^6.5.0"
pylint = "^2.16.2"
toml = "~0, >=0.10.2"
pre-commit = "^3.1.0"
black = "^23.1.0"
mypy = "^1.0.1"
isort = "^5.12.0"
tzlocal = "^4.2"
busypie = "~0, >=0.5.1"
sqlalchemy2-stubs = "~0, >=0.0.2a32"
types-requests = "^2.31.0.1"
types-pytz = ">=2022.7.1.2"
coveralls = "^3.3.1"
colorama = "~0, >=0.4.5"
httpx = "~0, >=0.23.3"
responses = "~0, >=0.22.0"
types-pyyaml = "^6.0.12.9"

[tool.black]
line-length = 132
target-version = ['py39', 'py310' ]
include = '(src\/scripts\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | \.poetry
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.isort]
profile = "black"
line_length = 132
skip_glob = [ "docs", "notes" ]

[build-system]
requires = ["poetry>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
