[tool.poetry]
name = "vplan"
version = "0.0.0" # published version is managed using Git tags (see below)
description = "Vacation plan manager service for SmartThings"
authors = ["Kenneth J. Pronovici <pronovic@ieee.org>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/pronovic/vplan"
repository = "https://github.com/pronovic/vplan"
include = [
   { path = 'Changelog', format = 'sdist' },
   { path = 'NOTICE', format = 'sdist' },
   { path = 'LICENSE', format = 'sdist' },
   { path = 'README.md', format = 'sdist' },
   { path = 'tests', format = 'sdist' },
]
packages = [ { include = "vplan", from = "src" } ]
classifiers=[
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: Apache Software License",
   "Operating System :: Unix",
   "Environment :: Console",
   "Environment :: No Input/Output (Daemon)",
   "Intended Audience :: Developers",
   "Natural Language :: English",
   "Topic :: Home Automation",
]

# Published version is managed using Git tags
# We get either the tag (like "0.24.1") or a snapshot-type version (like "0.24.1+3.e8319c4")
# If the plugin is not installed, then the version is always "0.0.0", taken from above
[tool.poetry-dynamic-versioning]
enable = true
pattern = '^[vV](?P<base>\d+\.\d+\.\d+)'  # this extracts the version from our vX.Y.Z tag format
format-jinja = "{% if distance == 0 and not dirty %}{{ base }}{% else %}{{ base }}+{{ distance }}.{{ commit }}{% endif %}"

[tool.poetry.scripts]
vplan = "vplan.client.cli:vplan"

[tool.poetry.dependencies]
python = ">=3.9,<4"
fastapi = "~0, >=0.103.2"
uvicorn = "~0, >=0.23.2"
pydantic-yaml = "~0, >=0.11.2"
semver = "^3.0.2"
click = "^8.1.7"
requests = "^2.31.0"
SQLAlchemy = "^1.4.49"
APScheduler = "^3.10.4"
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-testdox = "^3.1.0"
pytest-asyncio = "~0, >=0.21.1"
coverage = "^6.5.0"  # coveralls needs v6
pylint = "^3.0.1"
toml = "~0, >=0.10.2"
pre-commit = "^3.4.0"
black = "^23.9.1"
mypy = "^1.6.0"
isort = "^5.12.0"
tzlocal = "^5.1"
busypie = "~0, >=0.5.1"
sqlalchemy2-stubs = "~0, >=0.0.2a35"
types-requests = "^2.31.0.8"
types-pytz = ">=2023.3.1.1"
coveralls = "^3.3.1"
colorama = "~0, >=0.4.6"
httpx = "~0, >=0.25.0"
responses = "~0, >=0.23.0"
types-pyyaml = "^6.0.12.12"
waitress = "^2.1.2"
types-waitress = "^2.1.4.9"

[tool.black]
line-length = 132
target-version = ['py39', 'py310', 'py311', 'py312' ]
include = '(src\/scripts\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | \.poetry
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.isort]
profile = "black"
line_length = 132
skip_glob = [ "docs", "notes" ]

[tool.pytest.ini_options]
filterwarnings = [
   "ignore:.*pkg_resources is deprecated as an API"  # not sure where this is coming from, but we don't use it directly
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
